--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "test": "node ./scripts/run-automation-tests.mjs",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
